	o Generalized PDEscatter to a new function called DensityScatter with the two density estimation options PDE and SDH.
	o Renamed ShepardPDEScatter to ShepardDensityScatter using "SDH" density estimation.
	o InspectCorrelation added as shortcut to inspect correlations.
	o Heatmap: Due to scientific reviews, documentation is elaborated and visualisation is now clearer.

Version 1.1.13 (GitHub, 2020-06-17)
	o Fanplot and pieChart colors are defined by length of labels.
	o PDEscatter: Implemented several error catches and enabled two options of drawing a sample depending on the size of data.
	o Classplot: Implemented several error catches and fixed bug in case of NaN values and given Names.

Version 1.1.12 (CRAN, 2020-05-10)
	o Bugfix MDplot for Ordering Bimodal in BimodalityAmplitude and improved nameing for two input parameters for MDplot.
	o Improvement Classplot: ggplot2 added and if names exist, a switch to ggplot is taken per default because overlapping in long names can be avoided there.

Version 1.1.11 (GitHub, 2020-03-02)
	o Improvement of efficiency of ParetoDensityFunction using Rcpp by reducing computing time around 80 percent. Improvement is passed on to MDplot.
	o Classplot: Missing values can be now removed with na-rm=TRUE, fixed feature checks, LineColor is now per default invisible in this dot plot, Names for points and size of points can be set optionally (in case of using this plot to visualise a Receiver operating characteristic (ROC) with/without its curve).
	o bugfix: Heatmap and InspectDistances: using unname in isSymmetric to check correctly of symmetric distance matrix.
	o bugfix: PDEplot y-axis should always start with zero because this functions plots the density.
	o bugfix: SignedLog besides strings, now also accepts numerical values correctly for the Base argument.
	o bugfix: Fanplot and Piechart now labels <0.01% correctly.