@@ -120,7 +120,66 @@ x = cbind(
   )
 MDplot(x)
 }
-
+\dontshow{
+#worst case szenario
+# one variable random
+#one variable only 10 cases no name
+#second variable no name, ten unique cases
+Data=structure(c(NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 
+NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 
+NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 
+NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 
+NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 
+NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 
+NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 
+NaN, NaN, -0.0393120245472473, 1.83627122040061, -0.109770573325087, 
+-1.01037250829189, -1.23813311175269, 1.52711088395972, 0.885521985229627, 
+-1.23499902003538, -0.776410371740625, 1.2841949033221, 0.193760939175263, 
+0.481404979713261, 0.601345679024234, 0.646921755978838, 0.706307147163898, 
+0.834053863072768, 0.130131568294019, 0.910480525577441, 0.954021320911124, 
+0.0200626619625837, 0.887974956305698, 0.398595118895173, 0.633204030804336, 
+0.828125820495188, 0.405009237816557, 0.12401070818305, 0.0718156488146633, 
+0.758104813285172, 0.696702135261148, 0.522065132390708, 0.910167601890862, 
+0.92003503930755, 0.203844893025234, 0.201002374058589, 0.352767747594044, 
+0.799360475502908, 0.0215734702069312, 0.630723522277549, 0.212071146350354, 
+0.886195732513443, 0.667665995424613, 0.852023241110146, 0.603792746085674, 
+0.824619617545977, 0.426947308471426, 0.841525871772319, 0.754500712966546, 
+0.408950130455196, 0.829532583244145, 0.585258471313864, 0.636891445145011, 
+0.741905940696597, 0.812800564337522, 0.354737375164405, 0.707993973745033, 
+0.440743881510571, 0.350462233414873, 0.831067819381133, 0.624896374996752, 
+0.759756428189576, 0.0916956132277846, 0.198386165546253, 0.694313021376729, 
+0.95162225398235, 0.524074750952423, 0.547433242900297, 0.690702012740076, 
+0.780068216146901, 0.631904909387231, 0.241777470335364, 0.354435598943383, 
+0.0481027155183256, 0.900913363555446, 0.649821698432788, 0.661771818296984, 
+0.670809138799086, 0.785616835346445, 0.396758396411315, 0.719061772339046, 
+0.605793445836753, 0.193718662718311, 0.454754204489291, 0.191870308946818, 
+0.62292082188651, 0.468462550546974, 0.984963268041611, 0.845834592357278, 
+0.853445921558887, 0.712458800524473, 0.828843767754734, 0.211880749324337, 
+0.809977566124871, 0.0160791038069874, 0.632794039789587, 0.120573428692296, 
+0.688435051357374, 0.197073273127899, 0.20057232491672, 0.0266912879887968, 
+0.277176550356671, 0.396465837024152, 0.0808039274998009, 0.106191948521882, 
+0.985139257507399, 0.320198103552684, 0.86583884130232, 0.689437984023243, 
+0.93079084623605, 0.485144496196881, 0.151472200872377, NaN, 
+NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 
+NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 
+NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 
+NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 0.9347080134321, 
+0.595704924548045, 0.595704924548045, 0.907554242527112, 0.851929440163076, 
+0.902240498922765, 0.595704924548045, 0.902240498922765, 0.595704924548045, 
+0.155777201289311, 0.400634071789682, 0.125229959376156, 0.862448507919908, 
+0.902240498922765, 0.862448507919908, 0.907554242527112, 0.902240498922765, 
+0.155777201289311, 0.595704924548045, 0.851929440163076, 0.9347080134321, 
+0.400634071789682, 0.851929440163076, 0.902240498922765, 0.851929440163076, 
+0.907554242527112, 0.851929440163076, 0.400634071789682, 0.902240498922765, 
+0.155777201289311, 0.9347080134321, 0.902240498922765, 0.181812125025317, 
+0.181812125025317, 0.400634071789682, 0.9347080134321, 0.902240498922765, 
+0.907554242527112, 0.125229959376156, 0.851929440163076, 0.125229959376156, 
+0.125229959376156, 0.902240498922765, 0.902240498922765, 0.907554242527112, 
+0.400634071789682, 0.862448507919908, 0.400634071789682, 0.595704924548045, 
+0.400634071789682), .Dim = c(100L, 3L), .Dimnames = list(NULL, 
+    c("x", "", "")))
+MDplot(Data)    
+}
 }
 
 \note{
